--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ cmake_policy(SET CMP0015 NEW)
 project(SnowStar)
 
 add_subdirectory(Compiler/)
-add_subdirectory(Debugger/)
-add_subdirectory(VM/)
+# add_subdirectory(Debugger/)
+# add_subdirectory(VM/)
