New static analysis. + modified CALL

--- a/Compiler/CMakeLists.txt
+++ b/Compiler/CMakeLists.txt
@@ -35,5 +35,5 @@ endif (MSVC)
 
 if (CMAKE_COMPILER_IS_GNUCC)
 #    set(CMAKE_CXX_FLAGS "-std=c++17 -O2 -march=native -DNDEBUG")
-    set(CMAKE_CXX_FLAGS "-std=c++17 -ggdb -Wall -Wextra -W")
+    set(CMAKE_CXX_FLAGS "-std=c++17 -ggdb -Wall -Wextra -W -Wl,--export-dynamic")
 endif()
