--- a/VM/CMakeLists.txt
+++ b/VM/CMakeLists.txt
@@ -36,5 +36,6 @@ if (MSVC)
 endif (MSVC)
 
 if (CMAKE_COMPILER_IS_GNUCC)
-    set(CMAKE_CXX_FLAGS "-std=c++17 -O2 -march=native -DNDEBUG -ggdb")
+#    set(CMAKE_CXX_FLAGS "-std=c++17 -O2 -march=native -DNDEBUG")
+    set(CMAKE_CXX_FLAGS "-std=c++17 -ggdb -Wall -Wextra -W -Wl,--export-dynamic")
 endif()
