+ Variable declaration/definition

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,8 @@ project(MyProject)
 include_directories(
     ${RootProject_SOURCE_DIR}/antlr/cpp_runtime/runtime/src
     ${RootProject_SOURCE_DIR}/lib/antlr
+    ${RootProject_SOURCE_DIR}/ext
     ${RootProject_SOURCE_DIR}/include
-    £{RootProject_SOURCE_DIR}/ext
 )
 
 file(
