Working on casts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ cmake_policy(SET CMP0015 NEW)
 project(RootProject)
 
 add_subdirectory(antlr/cpp_runtime/)
+add_subdirectory(llvm/)
 add_subdirectory(src/)
