--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 cmake_policy(SET CMP0015 NEW)
 
-project(RootProject)
+project(SnowStar)
 
 add_subdirectory(antlr/cpp_runtime/)
-add_subdirectory(llvm/)
+# add_subdirectory(llvm/)
 add_subdirectory(src/)
