--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ cmake_policy(SET CMP0015 NEW)
 project(SnowStar)
 
 add_subdirectory(antlr/cpp_runtime/)
-# add_subdirectory(llvm/)
+add_subdirectory(tiny_process_library)
 add_subdirectory(src/)
