Changed CMake scripts.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,57 +1,69 @@
 cmake_minimum_required(VERSION 3.8)
-project(Compiler)
+project(Compiler C CXX)
 
 find_package(LLVM REQUIRED CONFIG)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
-set(LLVM_BUILD_LLVM_DYLIB OFF)
-set(LLVM_LINK_LLVM_DYLIB OFF)
-set(LLVM_ENABLE_CXX1Y ON)
+find_package(Threads REQUIRED)
 
 include_directories(
     ${SnowStar_SOURCE_DIR}/antlr/cpp_runtime/runtime/src
     ${SnowStar_SOURCE_DIR}/argh
     ${SnowStar_SOURCE_DIR}/lib/antlr
-    ${SnowStar_SOURCE_DIR}/ext
+    ${SnowStar_SOURCE_DIR}/tiny_process_library
+    ${SnowStar_SOURCE_DIR}/termcolor/include
     ${SnowStar_SOURCE_DIR}/include
     ${LLVM_INCLUDE_DIRS}
 )
 
 add_definitions(${LLVM_DEFINITIONS})
 
-file(
-    GLOB_RECURSE SOURCE_FILES
-    ${SnowStar_SOURCE_DIR}/lib/antlr/*.cpp
-    ${Compiler_SOURCE_DIR}/*.cpp
-)
+if (MSVC)
+	file(
+		GLOB_RECURSE SOURCE_FILES
+		${SnowStar_SOURCE_DIR}/lib/antlr/*.cpp
+		${Compiler_SOURCE_DIR}/*.cpp
+		${SnowStar_SOURCE_DIR}/tiny_process_library/process.cpp
+		${SnowStar_SOURCE_DIR}/tiny_process_library/process_win.cpp
+	)
+else()
+	file(
+		GLOB_RECURSE SOURCE_FILES
+		${SnowStar_SOURCE_DIR}/lib/antlr/*.cpp
+		${Compiler_SOURCE_DIR}/*.cpp
+		${SnowStar_SOURCE_DIR}/tiny_process_library/process.cpp
+		${SnowStar_SOURCE_DIR}/tiny_process_library/process_unix.cpp
+	)
+endif()
 
 add_executable(
     Compiler ${SOURCE_FILES}
 )
 
 llvm_map_components_to_libnames(LLVM_LIBRARIES
-    support core irreader option target
-    x86asmparser      x86codegen
-    amdgpuasmparser   amdgpucodegen
-    armasmparser      armcodegen
-                      msp430codegen    
-                      xcorecodegen
-    aarch64asmparser  aarch64codegen
-    mipsasmparser     mipscodegen
-    systemzasmparser  systemzcodegen
-    hexagonasmparser  hexagoncodegen
-    powerpcasmparser  powerpccodegen
-                      nvptxcodegen
-                      lanaicodegen
-    sparcasmparser    sparccodegen
-    bpfasmparser      bpfcodegen
+    support core irreader option target mc
+    x86asmparser          x86codegen          x86info          x86desc
+    amdgpuasmparser       amdgpucodegen       amdgpuinfo       amdgpudesc
+    armasmparser          armcodegen          arminfo          armdesc
+                          msp430codegen       msp430info       msp430desc
+                          xcorecodegen        xcoreinfo        xcoredesc
+    aarch64asmparser      aarch64codegen      aarch64info      aarch64desc
+    mipsasmparser         mipscodegen         mipsinfo         mipsdesc
+    systemzasmparser      systemzcodegen      systemzinfo      systemzdesc
+    hexagonasmparser      hexagoncodegen      hexagoninfo      hexagondesc
+    powerpcasmparser      powerpccodegen      powerpcinfo      powerpcdesc
+                          nvptxcodegen        nvptxinfo        nvptxdesc
+    lanaiasmparser        lanaicodegen        lanaiinfo        lanaidesc
+    sparcasmparser        sparccodegen        sparcinfo        sparcdesc
+    bpfasmparser          bpfcodegen          bpfinfo          bpfdesc
+    webassemblyasmparser  webassemblycodegen  webassemblyinfo  webassemblydesc
 )
 
+target_link_libraries (Compiler ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(Compiler antlr4_shared)
 target_link_libraries(Compiler ${LLVM_LIBRARIES})
-target_link_libraries(Compiler tiny-process-library)
 if(CMAKE_DL_LIBS)
     target_link_libraries(Compiler ${CMAKE_DL_LIBS})
 endif(CMAKE_DL_LIBS)
@@ -61,14 +73,19 @@ set(CMAKE_BUILD_TYPE "Debug")
 set_target_properties(Compiler PROPERTIES OUTPUT_NAME "ssc")
 
 if (MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+	if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
+    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D NOMINMAX /D NDEBUG")
+    else()
+    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /WX- /D NOMINMAX")
+    endif()
 endif (MSVC)
 
 if (CMAKE_COMPILER_IS_GNUCC)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/local/lib -Wl,-R/usr/local/lib")
     if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
-        set(CMAKE_CXX_FLAGS "-O3 -march=native -DNDEBUG")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -DNDEBUG")
     else()
-        set(CMAKE_CXX_FLAGS "-ggdb -Wall -Wextra -W")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -Wall -Wextra -W")
     endif()
 endif()
 
